--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             margin: 0 auto;
         }
     </style>
-    <title>Página Responsive con Imagen</title>
+    <title>Tiki House Cocktails</title>
 </head>
 <body>
     <div class="container">
         <img src="tiki1.jpg" alt="Descripción de la imagen">
         <img src="tiki2.jpg" alt="Descripción de la imagen">
         <img src="tiki3.jpg" alt="Descripción de la imagen">
+        <img src="tiki4.jpg" alt="Descripción de la imagen">
     </div>
 </body>
