--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
         <img src="tiki2.jpg" alt="Descripción de la imagen">
         <img src="tiki3.jpg" alt="Descripción de la imagen">
         <img src="tiki4.jpg" alt="Descripción de la imagen">
+        <img src="tiki5.jpg" alt="Descripción de la imagen">
     </div>
 </body>
