--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         <img src="tiki3.jpg" alt="Descripción de la imagen">
         <img src="tiki4.jpg" alt="Descripción de la imagen">
         <img src="tiki5.jpg" alt="Descripción de la imagen">
+         <img src="tiki6.jpg" alt="Descripción de la imagen">
     </div>
 </body>
