--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         <img src="tiki4.jpg" alt="Descripción de la imagen">
         <img src="tiki5.jpg" alt="Descripción de la imagen">
          <img src="tiki6.jpg" alt="Descripción de la imagen">
+        <img src="curso.jpg" alt="Descripción de la imagen">
     </div>
 </body>
