--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-info">Smuggler Rum Barrel <span class="text-muted fuenteCursiva"><p>$7.300</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Mix de jugos Tropicales, Vainilla</p> Una de las estrellas de la casa. Una combinacion perfecta entre el dulce y un toque citrico. Lacura perfecta para un corazon roto.</p>
+        <p class="lead" ><p>Mix de Rones, Mix de jugos Tropicales, Banana, Vainilla</p> Una de las estrellas de la casa. Una combinacion perfecta entre el dulce y un toque citrico. Lacura perfecta para un corazon roto.</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/rumbarrel.jpg" alt="ramo novia">
@@ -194,7 +194,7 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-success">Shark <span class="text-muted fuenteCursiva"><p>$7.300</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Frutos Rojos, Cynar, Vermuth Rosso y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por 
+        <p class="lead" ><p>Mix de Rones, Frutos Rojos, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por 
       los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
@@ -326,7 +326,7 @@
       </tr>
       <tr> 
         <td>Grasshoper</td>
-        <td>$4.500</td>  
+        <td>$5.000</td>  
       </tr>
           </tbody>
       </table>
@@ -347,12 +347,12 @@
               <tr>
                 <td>Corona</td>
                 <td>330ml</td>
-                <td>$5.000</td> 
+                <td>$4.500</td> 
               </tr>
               <tr> 
                 <td>Heiniken</td>
                 <td>500ml</td>
-                <td>$4.000</td>  
+                <td>$5.000</td>  
               </tr>
               </tbody>
           </table>
