--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
               <p class="lead" >
                 <h5 class="text-info"><p>1. Saca una foto a alguno de nuestros cocteles.</p>
                     <p>2. Subí la foto a tus historias de Instagram y etiquetanos @tikihouselp con el Hashtag #TikiHouseLp</p>
-                    <p>Tene en cuenta que para que nos aparezca, tu perfil debe estar público.</p>
+                    <p>Tene en cuenta que para que nos aparezca,tenes que seguirnos y tu perfil debe estar público.</p>
                     <p>3. Una vez que lo hagas, mostrale al staff que reposteamos tu foto y LISTO!.</p>
                     <p>4. Disfruta de tu coctel GRATIS!.</p>
                 </h5>
