--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
           <div class="carousel-caption text-end">
             <h2 class="fuenteCarrusel">Unico en La ciudad</h2>
-            <p >Somos el primer bar exlcusivo desde este estilo</p>
+            <p >Somos el primer bar exlcusivo de este estilo</p>
            
           </div>
         </div>
