--- a/promo.html
+++ b/promo.html
@@ -53,6 +53,8 @@
     <main class="container-fluid bg-dark">
       <!-- Promociones del Día -->
       <hr class="featurette-divider">
+      <hr class="featurette-divider">
+      <hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider">
       <div id="blue-hawai" class="row featurette mb-0">
         <div class="col-md-6 order-md-2">
           <h2 class="featurette-heading text-primary">Nuestras Promos del Día <p><span class="text-muted fuenteCursiva">Jueves, Viernes y Domingos</span></p></h2>
