--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       Su color tiene la similitud a las majestuosas aguas del oceano tropical.</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/blue.jpg" alt="ramo novia">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/blue.jpg" alt="">
   </div>
 </div>
 
@@ -185,9 +185,10 @@
         <p class="lead" ><p>Mix de Rones, Orgeat, Lima, Orange Curaçao</p>Un coctel equilibrado, sabroso con matices de frutas tropicales, citrico y un toque de almendras.
       Un Coctel clasico del Tiki que no puede faltar. Los expertos dicen que debe ser probado aunque sea solo una vez. Creado por uno de los padres de la cocteleria Tiki conocido como Trader Vic´s en 1944.
       Según la historia, Trader Vic inventó el Mai Tai para unos amigos tahitianos que lo visitaban. Después de probar el cóctel, exclamaron emocionados: "Maita'i roa ae!", lo que en tahitiano significa "¡Muy bueno!" o "¡Fuera de este mundo!" </p>
+      <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover imgVelo"  src="./assets/img/trago3.jpeg" alt="velo y tocado">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover imgVelo"  src="./assets/img/trago3.jpeg" alt="">
       </div>
     </div>
 
@@ -197,11 +198,13 @@
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-danger">Zombie <span class="text-muted fuenteCursiva"><p>$6.400</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p>El Zombie es un cóctel tiki legendario, 
+        <p class="lead" ><p>Mix de Rones, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
         creado en 1934 por Donn Beach (Don the Beachcomber), pionero de la cultura tiki en EE. UU. Este coctel es famoso por su potente mezcla de rones,
-         jugos tropicales y especias, diseñado para "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</div>
+         jugos tropicales y especias, diseñado para "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</p>
+         <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
+        </div>
       <div class="col-md-6">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/trago6.jpeg" alt="ramo novia">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/trago6.jpeg" alt="">
        
 
       </div>
@@ -210,11 +213,11 @@
     <hr class="featurette-divider">
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-info">Smuggler Rum Barrel <span class="text-muted fuenteCursiva"><p>$7.300</span></p></h2>
+        <h2 class="featurette-heading text-info">Rum Barrel <span class="text-muted fuenteCursiva"><p>$7.300</span></p></h2>
         <p class="lead" ><p>Mix de Rones, Mix de jugos Tropicales, Banana, Vainilla</p> Una de las estrellas de la casa. Una combinacion perfecta entre el dulce y un toque citrico. Lacura perfecta para un corazon roto.</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/rumbarrel.jpg" alt="ramo novia">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/rumbarrel.jpg" alt="">
        </div>
       </div>    
     <hr class="featurette-divider">
@@ -223,11 +226,10 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-success">Shark <span class="text-muted fuenteCursiva"><p>$7.300</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Frutos Rojos, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por 
-      los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
+        <p class="lead" ><p>Mix de Rones, Frutos Rojos, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/trago4.jpeg" alt="ramo novia"></div>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/trago4.jpeg" alt=""></div>
     </div>    
     <hr class="featurette-divider">
 
@@ -235,10 +237,11 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-warning">Saturno <span class="text-muted fuenteCursiva"><p>$5.500</span></p></h2>
-        <p class="lead" ><p>Gin, Orgeat, Falernum, Maracuya, Lima</p>Frutal y muy refrescante con la medida perfecta de Gin. A pesar de que el gin no es una bebida común entre los tikis
-      su presenciaconvierte a este coctel en una obra maestra.</p></div>
+        <p class="lead" ><p>Gin, Orgeat, Falernum, Maracuya, Lima</p>Frutal y muy refrescante con la medida perfecta de Gin. A pesar de que el gin no es una bebida común entre los tikis su presenciaconvierte a este coctel en una obra maestra.</p>
+        <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
+      </div>
       <div class="col-md-6 order-md-1" height="500">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/saturno.jpg" alt="ramo novia">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/saturno.jpg" alt="">
        </div>
     </div>    
     
@@ -249,7 +252,7 @@
     <h2 class="featurette-heading text-info">Sweet Dreams <span class="text-muted fuenteCursiva"><p>$5.500</span></p></h2>
     <p class="lead" ><p>Ron, Chocolate Blanco, Ananá, Banana y Crema</p>Un coctel dulce, con una explosion de sabores en tu paladar para que luego tengas Dulces Sueños.</p></div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sweet.jpg" alt="ramo novia">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sweet.jpg" alt="">
    </div>
 </div>    
 
@@ -257,49 +260,105 @@
 <!-- TRAGO 8 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-danger"><u>Kanaloha´s Elixir</u> (Por tiempo limitado)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <h2 class="featurette-heading text-danger"><u>Kanaloha´s Elixir</u> (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Lima, Blen de jugos tropicales(mango, naranja, maracuya), Syrup Gengibre.</p><p>Este coctel creado por el barmanger de este bar Ezequiel y se encuentra seleccionado como finalista en el torneo
     Tiki League Argentina 2024. </p><p>Cuenta la leyenda que Kanaloa Dios de los mares polinesios, solicitaba a todos los navegantes ofrendas de frutas exoticas para que el guiara aquellos para llegar a buen puerto. 
-    Kanaloa, utilizaba estas frutas para crear elixires, dicen que cualquiera que beba este coctel sentira el poder del oceano, el calor del sol en su piel y la frescura del viento en su alma.
-  </p></div>
+    Kanaloa, utilizaba estas frutas para crear elixires, dicen que cualquiera que beba este coctel sentira el poder del oceano, el calor del sol en su piel y la frescura del viento en su alma.</p>
+    <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
+  </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/kanaloha.jpg" alt="ramo novia">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/kanaloha.jpg" alt="">
    </div>
 </div>    
 <hr class="featurette-divider">
 <!-- TRAGO 9 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning"><u>Kairos</u> (Por tiempo limitado)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <h2 class="featurette-heading text-warning"><u>Kairos</u> (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Lima, Ananá, Pomelo, Syrup de Kiwi, Infusion de frutas patagonicas.</p><p>Este coctel creado por nuestra bartender Camila se encuentra seleccionado como finalista en el torneo
     Tiki League Argentina 2024. </p><p>Cuenta su historia, que en el jardin de los dioses crece un arbol milenario cuyas raices se extienden hasta el corazon de la tierra, el fruto de esté contiene una escencia que une los sabores de la tierra y el mar.
   Kairos es una sinfonia de sabores. Un coctel que transporta a quien lo bebe a un mundo donde el tiempo se detiene y la naturaleza es la unica verdad.</p>
+  <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/one.jpg" alt="ramo novia">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/one.jpg" alt="">
    </div>
 </div>
 <!-- TRAGO 10 -->
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning">Port au Prince<span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
-    <p class="lead" ><p>Ron, Falernum, Lima, Ananá, Syrup.</p>Un coctel tropical y exotico, lleno de especias que representar al tiki de la mejor manera.</p>
+    <h2 class="featurette-heading text-primary">Chief Lapu Lapu (New)<span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
+    <p class="lead" ><p>Ron, Syrup Maracuya, Limon, Naranja.</p>Un coctel con un Perfil citrico y tropical, Con jugos frescos y el infaltable ron, es ideal para aquellos que buscan un equilibrio entre dulzura y acidez, llevándote a un rincón exótico del Pacífico.Creado por Donn en el año 1950, Inspirado en el legendario jefe Lapu Lapu, quien resistió a los colonizadores en Filipinas, este cóctel ofrece una explosión de sabores tropicales.</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/port2.jpg" alt="ramo novia">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/chief.jpg" alt="">
    </div>
 </div>
 
 <!-- TRAGO 11 -->
-<hr class="featurette-divider">
+<hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning">Scorpion<span class="text-muted fuenteCursiva"><p>$6.900</span></p></h2>
-    <p class="lead" ><p>Gin, Ron, Brandy, Orgeat, Syrup, Naranja, Lima </p>Este coctel contiene una fuerte carga alcoholica, pero con notas citricas y un suaave sabor a especial donde la almendra resalta.</p>
+    <h2 class="featurette-heading text-info">Mr. Bali Hali (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Ron, Cassis, Ananá, Limon, Maracuya Syrup.</p>Este cóctel combina la lo exotico del cassis y la piña con un toque de Orgeat. Mr. Bali Hali es perfecto para quienes buscan un escape tropical en cada sorbo, evocando el espíritu de las playas soleadas. Su historia tiene relacion con una escultura que custodiaba la entrada de un famoso restaurante en 1954, esta escultura estaba modelada a semejanza de los antiguos cazadores de cabezas o headhunters del Pacifico Sur. </p>
+    <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/port.jpg" alt="ramo novia">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/Bali.jpg" alt="">
+   </div>
+</div>
+
+<!-- TRAGO 12 -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-success">Polynesian Paralysis (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Whisky, Orgeat, Ananá, Naranaja, Limon.</p>La presencia del whisky, suavizado por el orgeat y el ananá, terminando con un toque cítrico.Un clásico tiki con un giro sorprendente de whisky. El Polynesian Paralysis te transporta a la Polinesia con la suavidad del orgeat y los cítricos, perfecto para relajarte por completo.</p>
+    <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/paralysis.jpg" alt="">
+   </div>
+</div>
+
+<!-- TRAGO 13 -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-warning">Astro Aku Aku (New)<span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
+    <p class="lead" ><p>Ron, Falernum, Maracuya Syrup, Durazno, Lima.</p>Exótico y cítrico, con maracuyá, durazno y ron complementados por el toque especiado del falernum.Inspirado en la famosa Aku Aku Lounge, este cóctel es un viaje intergaláctico de sabores frutales y especias. Ideal para los amantes de las mezclas frescas con un toque tropical.</p>
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/aku.jpg" alt="">
+   </div>
+</div>
+
+<!-- TRAGO 14 -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-danger">Paralysis Punch (New)<span class="text-muted fuenteCursiva"><p>$6.800</span></p></h2>
+    <p class="lead" ><p>Ron, Orgeat, Limon, Ananá, Naranja</p>Frutal y refrescante, con una combinación equilibrada de ananá, naranja y un toque de almendra del orgeat. Con una potente mezcla de ron y cítricos, el Paralysis Punch ofrece un golpe de sabor tropical, ideal para quienes buscan una experiencia tiki más intensa.</p>
+    <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/punch.jpg" alt="">
+   </div>
+</div>
+
+<!-- TRAGO 15 -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-success">Kamaaina (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Gin Yūgen, Hesperidina, Limon, crema de coco, Ginger Ale.</p> Un coctel equilibrado y refrescante, combinado con un gin que marca su presencia.El término “Kamaaina” significa “uno de la familia”, y este cóctel se mantiene fiel a su nombre con una mezcla suave de la crema de coco combinado con la frescura y temple del gin Yūgen, crean un equilibrio tropical y especiado. Perfecto para quienes buscan un sabor auténtico, diferente y local</p>
+    <p><u>Ginger Ale:</u> Gaseosa de gengibre, tambien conocida como ginger beer, pero que no contiene alcohol</p>
+
+  </p> *<a href="https://yugengin.com" style="color:red">Yūgen Dry Gin</a> es el primer gin de estilo japonés hecho en Argentina, inspirado en los sabores de Japón. Elaborado con botánicos orientales obtenidos de productores japoneses en La Plata, busca cautivar a quienes desean explorar algo diferente y elevar su experiencia con este gran destilado. Más Info de Yūgen Gin <a href="https://yugengin.com">Aquí</a> </p>
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/yugen.jpg" alt="">
    </div>
 </div>
 
@@ -544,7 +603,7 @@
 
   </div><!-- /.container -->
    <!-- FOOTER -->
-  
+   <hr class="featurette-divider">
     <footer class="container-fluid bg-dark p-5 mb-0 ">
       <p class="float-end"><a href="#">Volver arriba</a></p>
       <p>&copy; 2024 Ezequiel Morales. &middot; <a href="#">Imagenes ilustrativas propiedad de Tiki House</a> &middot;</p>
