--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <p><a class="btn bgBotonRosa text-white" href="#free">Ir &raquo;</a></p>
     </div>
 
-    <!-- TRAGO 1 -->
+     <!-- TRAGO 1 -->
 
     <hr class="featurette-divider">
 <div id="blue-hawai" class="row featurette mb-0">
@@ -182,7 +182,7 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-warning">Mai Tai <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Orgeat, Lima, Orange Curaçao</p>Un coctel equilibrado, sabroso con matices de frutas tropicales, citrico y un toque de almendras.
+        <p class="lead" ><p>Ron Dorado, Ron Blanco, Orgeat, Lima, Orange Curaçao</p>Un coctel equilibrado, sabroso con matices de frutas tropicales, citrico y un toque de almendras.
       Un Coctel clasico del Tiki que no puede faltar. Los expertos dicen que debe ser probado aunque sea solo una vez. Creado por uno de los padres de la cocteleria Tiki conocido como Trader Vic´s en 1944.
       Según la historia, Trader Vic inventó el Mai Tai para unos amigos tahitianos que lo visitaban. Después de probar el cóctel, exclamaron emocionados: "Maita'i roa ae!", lo que en tahitiano significa "¡Muy bueno!" o "¡Fuera de este mundo!" </p>
       <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
@@ -198,9 +198,8 @@
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-danger">Zombie <span class="text-muted fuenteCursiva"><p>$6.400</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
-        creado en 1934 por Donn Beach (Don the Beachcomber), pionero de la cultura tiki en EE. UU. Este coctel es famoso por su potente mezcla de rones,
-         jugos tropicales y especias, diseñado para "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</p>
+        <p class="lead" ><p>Ron Blanco, Ron Dorado, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
+        creado en 1934 por Donn Beach (Don the Beachcomber), pionero de la cultura tiki en EE. UU. Este coctel es famoso por "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</p>
          <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
         </div>
       <div class="col-md-6">
@@ -214,7 +213,7 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-info">Rum Barrel <span class="text-muted fuenteCursiva"><p>$7.300</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Mix de jugos Tropicales, Banana, Vainilla</p> Una de las estrellas de la casa. Una combinacion perfecta entre el dulce y un toque citrico. Lacura perfecta para un corazon roto.</p>
+        <p class="lead" ><p>Ron Blanco, Ron Dorado, Maracuya, Naranja, Ananá, Banana y Vainilla</p> Una de las estrellas de la casa. Una combinacion perfecta entre el dulce y un toque citrico. La cura perfecta para un corazon roto.</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/rumbarrel.jpg" alt="">
@@ -226,7 +225,7 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-success">Shark <span class="text-muted fuenteCursiva"><p>$7.300</span></p></h2>
-        <p class="lead" ><p>Mix de Rones, Frutos Rojos, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
+        <p class="lead" ><p>Ron Blanco, Ron Dorado, Frutos Rojos, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/trago4.jpeg" alt=""></div>
@@ -260,10 +259,8 @@
 <!-- TRAGO 8 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-danger"><u>Kanaloha´s Elixir</u> (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
-    <p class="lead" ><p>Ron, Falernum, Lima, Blen de jugos tropicales(mango, naranja, maracuya), Syrup Gengibre.</p><p>Este coctel creado por el barmanger de este bar Ezequiel y se encuentra seleccionado como finalista en el torneo
-    Tiki League Argentina 2024. </p><p>Cuenta la leyenda que Kanaloa Dios de los mares polinesios, solicitaba a todos los navegantes ofrendas de frutas exoticas para que el guiara aquellos para llegar a buen puerto. 
-    Kanaloa, utilizaba estas frutas para crear elixires, dicen que cualquiera que beba este coctel sentira el poder del oceano, el calor del sol en su piel y la frescura del viento en su alma.</p>
+    <h2 class="featurette-heading text-danger">Kanaloha´s Elixir<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Ron, Falernum, Lima, Blen de jugos tropicales(mango, naranja, maracuya), Syrup Gengibre.</p><p>Dicen que quien beba este elixir, sentira la fuerza del oceano en su sangre, el calor del sol en su piel y la frescura del viento en su alma. </p>
     <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
@@ -274,10 +271,9 @@
 <!-- TRAGO 9 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning"><u>Kairos</u> (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
-    <p class="lead" ><p>Ron, Falernum, Lima, Ananá, Pomelo, Syrup de Kiwi, Infusion de frutas patagonicas.</p><p>Este coctel creado por nuestra bartender Camila se encuentra seleccionado como finalista en el torneo
-    Tiki League Argentina 2024. </p><p>Cuenta su historia, que en el jardin de los dioses crece un arbol milenario cuyas raices se extienden hasta el corazon de la tierra, el fruto de esté contiene una escencia que une los sabores de la tierra y el mar.
-  Kairos es una sinfonia de sabores. Un coctel que transporta a quien lo bebe a un mundo donde el tiempo se detiene y la naturaleza es la unica verdad.</p>
+    <h2 class="featurette-heading text-warning">Kairos<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Ron, Falernum, Lima, Ananá, Pomelo, Syrup de Kiwi, Infusion de frutas patagonicas.</p><p>Este coctel creado por nuestra bartender Camila fue seleccionado como finalista en el torneo
+    Tiki League Argentina 2024. </p>
   <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
@@ -288,8 +284,8 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-primary">Chief Lapu Lapu (New)<span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
-    <p class="lead" ><p>Ron, Syrup Maracuya, Limon, Naranja.</p>Un coctel con un Perfil citrico y tropical, Con jugos frescos y el infaltable ron, es ideal para aquellos que buscan un equilibrio entre dulzura y acidez, llevándote a un rincón exótico del Pacífico.Creado por Donn en el año 1950, Inspirado en el legendario jefe Lapu Lapu, quien resistió a los colonizadores en Filipinas, este cóctel ofrece una explosión de sabores tropicales.</p>
+    <h2 class="featurette-heading text-primary">Chief Lapu Lapu <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
+    <p class="lead" ><p>Ron, Syrup Maracuya, Limon, Naranja.</p>Un coctel con un Perfil citrico y tropical, Con jugos frescos y el infaltable ron, es ideal para aquellos que buscan un equilibrio entre dulzura y acidez, llevándote a un rincón exótico del Pacífico.</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/chief.jpg" alt="">
@@ -300,9 +296,9 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-info">Mr. Bali Hali (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
-    <p class="lead" ><p>Ron, Cassis, Ananá, Limon, Maracuya Syrup.</p>Este cóctel combina la lo exotico del cassis y la piña con un toque de Orgeat. Mr. Bali Hali es perfecto para quienes buscan un escape tropical en cada sorbo, evocando el espíritu de las playas soleadas. Su historia tiene relacion con una escultura que custodiaba la entrada de un famoso restaurante en 1954, esta escultura estaba modelada a semejanza de los antiguos cazadores de cabezas o headhunters del Pacifico Sur. </p>
-    <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
+    <h2 class="featurette-heading text-info">Mr. Bali Hali <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Ron, Cassis, Ananá, Limon, Maracuya Syrup.</p>Este cóctel combina lo exotico del cassis y la piña . Mr. Bali Hali es perfecto para quienes buscan un escape tropical en cada sorbo, evocando el espíritu de las playas soleadas. </p>
+  
   </div>
   <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/Bali.jpg" alt="">
@@ -313,7 +309,7 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-success">Polynesian Paralysis (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <h2 class="featurette-heading text-success">Polynesian Paralysis <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
     <p class="lead" ><p>Whisky, Orgeat, Ananá, Naranaja, Limon.</p>La presencia del whisky, suavizado por el orgeat y el ananá, terminando con un toque cítrico.Un clásico tiki con un giro sorprendente de whisky. El Polynesian Paralysis te transporta a la Polinesia con la suavidad del orgeat y los cítricos, perfecto para relajarte por completo.</p>
     <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
   </div>
@@ -326,7 +322,7 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning">Astro Aku Aku (New)<span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
+    <h2 class="featurette-heading text-warning">Astro Aku Aku <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Maracuya Syrup, Durazno, Lima.</p>Exótico y cítrico, con maracuyá, durazno y ron complementados por el toque especiado del falernum.Inspirado en la famosa Aku Aku Lounge, este cóctel es un viaje intergaláctico de sabores frutales y especias. Ideal para los amantes de las mezclas frescas con un toque tropical.</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
@@ -338,7 +334,7 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-danger">Paralysis Punch (New)<span class="text-muted fuenteCursiva"><p>$6.800</span></p></h2>
+    <h2 class="featurette-heading text-danger">Paralysis Punch <span class="text-muted fuenteCursiva"><p>$6.800</span></p></h2>
     <p class="lead" ><p>Ron, Orgeat, Limon, Ananá, Naranja</p>Frutal y refrescante, con una combinación equilibrada de ananá, naranja y un toque de almendra del orgeat. Con una potente mezcla de ron y cítricos, el Paralysis Punch ofrece un golpe de sabor tropical, ideal para quienes buscan una experiencia tiki más intensa.</p>
     <p><u>Orgeat:</u> Cocción de Almendras, azucar y especias</p>
   </div>
