--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 <!-- TRAGO 8 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-danger">Kanaloha´s Elixir<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <h2 class="featurette-heading text-danger">Kanaloha´s Elixir BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Lima, Blen de jugos tropicales(mango, naranja, maracuya), Syrup Gengibre.</p><p>Dicen que quien beba este elixir, sentira la fuerza del oceano en su sangre, el calor del sol en su piel y la frescura del viento en su alma. </p>
     <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
   </div>
@@ -271,7 +271,7 @@
 <!-- TRAGO 9 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning">Kairos<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <h2 class="featurette-heading text-warning">Kairos BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Lima, Ananá, Pomelo, Syrup de Kiwi, Infusion de frutas patagonicas.</p><p>Este coctel creado por nuestra bartender Camila fue seleccionado como finalista en el torneo
     Tiki League Argentina 2024. </p>
   <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
