--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <hr class="featurette-divider">
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-warning">Mai Tai <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
+        <h2 class="featurette-heading text-warning">Mai Tai BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
         <p class="lead" ><p>Ron Dorado, Ron Blanco, Orgeat, Lima, Orange Curaçao</p>Un coctel equilibrado, sabroso con matices de frutas tropicales, citrico y un toque de almendras.
       Un Coctel clasico del Tiki que no puede faltar. Los expertos dicen que debe ser probado aunque sea solo una vez. Creado por uno de los padres de la cocteleria Tiki conocido como Trader Vic´s en 1944.
       Según la historia, Trader Vic inventó el Mai Tai para unos amigos tahitianos que lo visitaban. Después de probar el cóctel, exclamaron emocionados: "Maita'i roa ae!", lo que en tahitiano significa "¡Muy bueno!" o "¡Fuera de este mundo!" </p>
@@ -197,7 +197,7 @@
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-danger">Zombie <span class="text-muted fuenteCursiva"><p>$6.400</span></p></h2>
+        <h2 class="featurette-heading text-danger">Zombie BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
         <p class="lead" ><p>Ron Blanco, Ron Dorado, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
         creado en 1934 por Donn Beach (Don the Beachcomber), pionero de la cultura tiki en EE. UU. Este coctel es famoso por "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</p>
          <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
@@ -259,7 +259,7 @@
 <!-- TRAGO 8 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-danger">Kanaloha´s Elixir BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
+    <h2 class="featurette-heading text-danger">Kanaloha´s Elixir <span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Lima, Blen de jugos tropicales(mango, naranja, maracuya), Syrup Gengibre.</p><p>Dicen que quien beba este elixir, sentira la fuerza del oceano en su sangre, el calor del sol en su piel y la frescura del viento en su alma. </p>
     <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
   </div>
@@ -271,7 +271,7 @@
 <!-- TRAGO 9 --> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning">Kairos BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
+    <h2 class="featurette-heading text-warning">Kairos<span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Lima, Ananá, Pomelo, Syrup de Kiwi, Infusion de frutas patagonicas.</p><p>Este coctel creado por nuestra bartender Camila fue seleccionado como finalista en el torneo
     Tiki League Argentina 2024. </p>
   <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
