--- a/promo.html
+++ b/promo.html
@@ -57,14 +57,12 @@
       <hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider"><hr class="featurette-divider">
       <div id="blue-hawai" class="row featurette mb-0">
         <div class="col-md-6 order-md-2">
-          <h2 class="featurette-heading text-primary">Nuestras Promos del Día <p><span class="text-muted fuenteCursiva">Jueves, Viernes y Domingos</span></p></h2>
+          <h2 class="featurette-heading text-primary">Nuestras Promos del Día <p><span class="text-muted fuenteCursiva">Jueves y Domingos</span></p></h2>
           <p class="lead">Nuestras promos aplican desde las 20:00hs a 23:00hs</p>
           <p>50% de Descuento en cocteles seleccionados</p>
           <table class="table table-dark table-striped">
             <tbody>
               <tr><td>Daiquiri Saborizado (Ananá, Durazno)</td></tr>
-              <tr><td>Caipirinha</td></tr>
-              <tr><td>Mojito</td></tr>
             </tbody>
           </table>
         </div>
