--- a/promo.html
+++ b/promo.html
@@ -62,7 +62,7 @@
           <p>50% de Descuento en cocteles seleccionados</p>
           <table class="table table-dark table-striped">
             <tbody>
-              <tr><td>Daiquiri Saborizado (Ananá, Durazno)</td></tr>
+              <tr><td>Daiquiri Saborizado (Frutilla, Ananá, Durazno)</td></tr>
             </tbody>
           </table>
         </div>
