--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <hr class="featurette-divider">
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-warning">Mai Tai BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
+        <h2 class="featurette-heading text-warning">Mai Tai <span class="text-muted fuenteCursiva"><p>$5.500</span></p></h2>
         <p class="lead" ><p>Ron Dorado, Ron Blanco, Orgeat, Lima, Orange Curaçao</p>Un coctel equilibrado, sabroso con matices de frutas tropicales, citrico y un toque de almendras.
       Un Coctel clasico del Tiki que no puede faltar. Los expertos dicen que debe ser probado aunque sea solo una vez. Creado por uno de los padres de la cocteleria Tiki conocido como Trader Vic´s en 1944.
       Según la historia, Trader Vic inventó el Mai Tai para unos amigos tahitianos que lo visitaban. Después de probar el cóctel, exclamaron emocionados: "Maita'i roa ae!", lo que en tahitiano significa "¡Muy bueno!" o "¡Fuera de este mundo!" </p>
@@ -197,7 +197,7 @@
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-danger">Zombie BA COCKTAIL WEEK<span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
+        <h2 class="featurette-heading text-danger">Zombie <span class="text-muted fuenteCursiva"><p>$5.500</span></p></h2>
         <p class="lead" ><p>Ron Blanco, Ron Dorado, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
         creado en 1934 por Donn Beach (Don the Beachcomber), pionero de la cultura tiki en EE. UU. Este coctel es famoso por "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</p>
          <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
@@ -235,7 +235,7 @@
    <!-- TRAGO 6 --> 
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-warning">Saturno <span class="text-muted fuenteCursiva"><p>$5.500</span></p></h2>
+        <h2 class="featurette-heading text-warning">Saturno <span class="text-muted fuenteCursiva"><p>$5.000</span></p></h2>
         <p class="lead" ><p>Gin, Orgeat, Falernum, Maracuya, Lima</p>Frutal y muy refrescante con la medida perfecta de Gin. A pesar de que el gin no es una bebida común entre los tikis su presenciaconvierte a este coctel en una obra maestra.</p>
         <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
       </div>
@@ -408,11 +408,7 @@
         <td>Mojito</td>
         <td>$6.000</td>  
       </tr>
-      <tr> 
-        <td>Grasshoper</td>
-        <td>$5.000</td>  
-      </tr>
-          </tbody>
+                </tbody>
       </table>
     </div>
 
